// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Results
    apartments={Array []}
    error_msg=""
    loading={false}
  >
    <div
      className="no-results"
    >
      Nothing to show!
    </div>
  </Results>
</Provider>
`;

exports[`Results when error occurred renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Results
    apartments={Array []}
    error_msg="Error"
    loading={false}
  >
    <div
      className="error"
    >
      Error
    </div>
  </Results>
</Provider>
`;

exports[`Results when fetching data from API renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Results
    apartments={Array []}
    error_msg=""
    loading={true}
  >
    <div
      className="loading"
    >
      Loading...
    </div>
  </Results>
</Provider>
`;

exports[`Results when results are available renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Results
    apartments={
      Array [
        Object {
          "details": Object {
            "name": "TEST",
          },
          "id": 123,
          "location": Object {
            "name": "Test",
          },
          "photos": Array [
            Object {
              "m": "qwer",
            },
          ],
          "price": 123,
        },
        Object {
          "details": Object {
            "name": "TEST",
          },
          "id": 123,
          "location": Object {
            "name": "Test",
          },
          "photos": Array [
            Object {
              "m": "qwer",
            },
          ],
          "price": 123,
        },
      ]
    }
    error_msg=""
    loading={false}
  >
    <Offer
      details={
        Object {
          "name": "TEST",
        }
      }
      id={123}
      location={
        Object {
          "name": "Test",
        }
      }
      photos={
        Array [
          Object {
            "m": "qwer",
          },
        ]
      }
      price={123}
    >
      <a
        className="offer-item"
        href="/"
        key="123"
      >
        <div
          className="image-container"
        >
          <img
            alt="TEST"
            className="offer-image"
            height="100%"
            src="qwer"
            width="100%"
          />
        </div>
        <div
          className="offer-item-info"
        >
          <div
            className="info-container"
          >
            <div
              className="offer-title cut-title"
            >
              TEST
            </div>
            <div>
              Test
            </div>
          </div>
          <div
            className="price-container"
          >
            <span />
          </div>
        </div>
        <div
          className="bottom-container"
        >
          <a
            className="more-button"
            href="link"
          >
            Book now
          </a>
        </div>
      </a>
    </Offer>
    <Offer
      details={
        Object {
          "name": "TEST",
        }
      }
      id={123}
      location={
        Object {
          "name": "Test",
        }
      }
      photos={
        Array [
          Object {
            "m": "qwer",
          },
        ]
      }
      price={123}
    >
      <a
        className="offer-item"
        href="/"
        key="123"
      >
        <div
          className="image-container"
        >
          <img
            alt="TEST"
            className="offer-image"
            height="100%"
            src="qwer"
            width="100%"
          />
        </div>
        <div
          className="offer-item-info"
        >
          <div
            className="info-container"
          >
            <div
              className="offer-title cut-title"
            >
              TEST
            </div>
            <div>
              Test
            </div>
          </div>
          <div
            className="price-container"
          >
            <span />
          </div>
        </div>
        <div
          className="bottom-container"
        >
          <a
            className="more-button"
            href="link"
          >
            Book now
          </a>
        </div>
      </a>
    </Offer>
  </Results>
</Provider>
`;
